@@ -27,8 +27,10 @@ distribution.
 
 #include "modules/World.h"
 
+#include "df/adventurest.h"
 #include "df/block_square_event_world_constructionst.h"
 #include "df/map_block.h"
+#include "df/nemesis_record.h"
 #include "df/plotinfost.h"
 #include "df/world.h"
 
@@ -139,6 +141,18 @@ bool World::isLegends(df::game_type t)
     if (t == -1 && df::global::gametype)
         t = *df::global::gametype;
     return (t == game_type::VIEW_LEGENDS);
+}
+
+df::unit * World::getAdventurer() {
+    using df::global::adventure;
+
+    if (!isAdventureMode() || !adventure)
+        return NULL;
+
+    if (auto nem = df::nemesis_record::find(adventure->player_id))
+        return nem->unit;
+
+    return NULL;
 }
 
 int32_t World::GetCurrentSiteId() {
